--- a/pages/about.html
+++ b/pages/about.html
@@ -2,4 +2,4 @@
 <hr />
 <H2><a href="../My_hobby.html">Moje Hobby</a> to, Granie w gry komputerowe</H2>
 <img src="../assets/img/pexels-xexusdesigner-777001.jpg" style="width:400px;height:300px;">
-<h2><a href="../My_hobby.html">Powrót</a></h2>
+<h2><a href="../index.html">Powrót</a></h2>
